src/test/dev-workspace/src/main/java/net/labymod/core/laby3d/opengl/error/generated/NVMemoryObjectSparse_StringErrorContext.java
package net.labymod.core.laby3d.opengl.error.generated;

import java.util.HashMap;
import java.util.Map;

/* JADX INFO: loaded from: LabyMod-4.jar:net/labymod/core/laby3d/opengl/error/generated/NVMemoryObjectSparse_StringErrorContext.class */
public final class NVMemoryObjectSparse_StringErrorContext {
    public static Map<String, String> buildMethods() {
        Map<String, String> methods = new HashMap<>();
        methods.put("glBufferPageCommitmentMemNV(IJJIJZ)V", "net/labymod/core/laby3d/opengl/error/generated/NVMemoryObjectSparseErrorContext");
        methods.put("glNamedBufferPageCommitmentMemNV(IJJIJZ)V", "net/labymod/core/laby3d/opengl/error/generated/NVMemoryObjectSparseErrorContext");
        methods.put("glTexPageCommitmentMemNV(IIIIIIIIIIJZ)V", "net/labymod/core/laby3d/opengl/error/generated/NVMemoryObjectSparseErrorContext");
        methods.put("glTexturePageCommitmentMemNV(IIIIIIIIIIJZ)V", "net/labymod/core/laby3d/opengl/error/generated/NVMemoryObjectSparseErrorContext");
        return methods;
    }
}
